# rive-android

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .rive_head  .rive_renderer  .tasks.25.11  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY_MANAGEMENT.md  README.md  VERSION  build.gradle  gradle.properties  rive_compose_perfetto.cfg  settings.gradle
.github/ISSUE_TEMPLATE/: i-have-a-problem-with-rive-android.md  runtime-issue-template.yml
.github/actions/deploy/: action.yml
.github/actions/prepare/: action.yml
.github/actions/version-bump/: action.yml
.github/scripts/: rive_cpp_check.sh
.github/workflows/: build.yml  publish_api_docs.yml  re-release.yml  release.yml  submodule_check.yml  test.yml  tests.yml
app/: build.gradle
benchmark/: build.gradle
compatibilitytest/: build.gradle
cpp/: .ndk_version  .ndk_version.bots  CMakeLists.txt  Makefile  build.all.sh  build.clean.sh  build.rive.for.sh  build.sh  cache_helper.sh  cmake.build.deps.sh  get_skia.sh  make_skia_android.sh  premake5.lua
cpp/include/: jni_refs.hpp
cpp/include/bindings/: bindings_renderer.hpp  bindings_renderer_skia.hpp
cpp/include/helpers/: EGLThreadState.h  Renderer.h  Renderer.h.bak  Settings.h  Stats.hpp  Thread.h  Triangle.h  WorkerThread.h  egl_manager.hpp  egl_share_thread_state.hpp  egl_thread_state.hpp  egl_worker.hpp  general.hpp  rendering_stats.hpp  settings.hpp  skia_context.hpp  thread.hpp  tracer.hpp  worker_thread.hpp
cpp/include/models/: animation_observer.hpp  dimensions_helper.hpp  gradient_builder.hpp  i_jni_renderer.hpp  jni_renderer.hpp  jni_renderer_gl.hpp  jni_renderer_skia.hpp  linear_gradient_builder.hpp  radial_gradient_builder.hpp  render_paint.hpp  render_path.hpp  tracer.hpp
cpp/include/renderer/: low_level_renderer.hpp  opengl.h  opengl_render_paint.hpp  opengl_render_path.hpp  opengl_renderer.hpp
cpp/src/: jni_refs.cpp
cpp/src/bindings/: bindings_aabb.cpp  bindings_animation_observer.cpp  bindings_animation_view.cpp  bindings_artboard.cpp  bindings_file.cpp  bindings_helper.cpp  bindings_init.cpp  bindings_layer_state.cpp  bindings_linear_animation.cpp  bindings_linear_animation_instance.cpp  bindings_renderer.cpp  bindings_renderer_metrics.cpp  bindings_renderer_skia.cpp  bindings_rive_surface_view.cpp  bindings_rive_texture_view.cpp  bindings_state_machine.cpp  bindings_state_machine_input.cpp  bindings_state_machine_input_instance.cpp  bindings_state_machine_instance.cpp  bindings_swappy_view.cpp
cpp/src/helpers/: EGLThreadState.cpp  Renderer.cpp  Settings.cpp  Thread.cpp  egl_manager.cpp  egl_share_thread_state.cpp  egl_thread_state.cpp  egl_worker.cpp  general.cpp  settings.cpp  skia_context.cpp  thread.cpp  worker_thread.cpp
cpp/src/models/: animation_observer.cpp  dimensions_helper.cpp  jni_renderer.cpp  jni_renderer_skia.cpp  linear_gradient_builder.cpp  radial_gradient_builder.cpp  render_paint.cpp  render_path.cpp
cpp/src/renderer/: low_level_renderer.cpp  opengl_render_paint.cpp  opengl_render_path.cpp  opengl_renderer.cpp
dev/: android-test-loop.sh
docs/gfm/: index.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kotlin/: .gitignore  build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
kotlin/src/desktopNative/cpp/: CMakeLists.txt
kotlin/src/desktopNative/cpp/src/: desktop_general.cpp  desktop_image_decode.cpp
kotlin/src/main/cpp/: .ndk_version  .ndk_version.bots  CMakeLists.txt  Makefile  build.all.sh  build.clean.sh  build.rive.for.sh  clean_all.sh  premake5_cpp_runtime.lua
kotlin/src/main/cpp/include/: jni_refs.hpp
kotlin/src/main/cpp/include/helpers/: android_factories.hpp  android_skia_factory.hpp  audio_engine.hpp  canvas_render_objects.hpp  conversions.hpp  egl_error.hpp  egl_share_thread_state.hpp  egl_worker.hpp  font_helper.hpp  general.hpp  image_decode.hpp  jni_exception_handler.hpp  jni_resource.hpp  jni_string.hpp  rendering_stats.hpp  rive_log.hpp  thread.hpp  thread_state_egl.hpp  thread_state_pls.hpp  thread_state_skia.hpp  tracer.hpp  worker_ref.hpp  worker_thread.hpp
kotlin/src/main/cpp/include/models/: canvas_renderer.hpp  dimensions_helper.hpp  egl_result.hpp  jni_file_asset_loader.hpp  jni_renderer.hpp  jni_renderer_skia.hpp  lazy_framebuffer_render_target_gl.hpp  render_context.hpp  render_surface.hpp  render_surface_gl.hpp  render_surface_vulkan.hpp  worker_impl.hpp
kotlin/src/main/cpp/src/: jni_refs.cpp
kotlin/src/main/cpp/src/bindings/: bindings_artboard.cpp  bindings_audio.cpp  bindings_bindable_artboard.cpp  bindings_command_queue.cpp  bindings_data_binding.cpp  bindings_file.cpp  bindings_file_asset.cpp  bindings_file_asset_loader.cpp  bindings_font.cpp  bindings_font_test.cpp  bindings_helper.cpp  bindings_init.cpp  bindings_jni_string_test.cpp  bindings_layer_state.cpp  bindings_linear_animation_instance.cpp  bindings_render_context.cpp  bindings_renderer.cpp  bindings_rive_event.cpp  bindings_rive_texture_view.cpp  bindings_state_machine_input_instance.cpp  bindings_state_machine_instance.cpp  bindings_text_value_run.cpp
kotlin/src/main/cpp/src/helpers/: android_factories.cpp  audio_engine.cpp  canvas_render_objects.cpp  conversions.cpp  egl_share_thread_state.cpp  egl_worker.cpp  font_helper.cpp  general.cpp  image_decode.cpp  jni_exception_handler.cpp  jni_resource.cpp  jni_string.cpp  rive_log.cpp  thread_state_egl.cpp  thread_state_pls.cpp  thread_state_skia.cpp  worker_ref.cpp  worker_thread.cpp
kotlin/src/main/cpp/src/models/: canvas_renderer.cpp  dimensions_helper.cpp  egl_result.cpp  jni_file_asset_loader.cpp  jni_renderer.cpp  jni_renderer_skia.cpp  render_context_gl.cpp  render_context_vulkan.cpp  render_surface.cpp  render_surface_gl.cpp  render_surface_vulkan.cpp  worker_impl.cpp
kotlin/src/main/cpp/test/: CMakeLists.txt  first_test.cpp  run_android_tests.sh  test.sh
preview-test/: build.gradle.kts
rive-preview/: build.gradle.kts
sample-desktop/: build.gradle.kts
scripts/: publish-module.gradle  publish-root.gradle
tools/perfetto/: README.md  rive-trace.textproto
(+972 files in other folders)
